# Samokhina-PhD-Thesis

./: Experiment.ipynb  README.md  data_download.sh  pyproject.toml
node/dataset/: __init__.py  p300.py  transforms.py  utils.py
node/models/: __init__.py
