[tool.poetry]
name = "continuous_time_paper"
version = "0.1.0"
description = ""
authors = ["Alina Samokhina <alina.samokhina@mipt.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
h5py = "^3.6.0"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
